# GidAppData

./: .gitignore  .isort.cfg  .pydeps  MANIFEST.in  TODO.md  pyproject.toml  readme.md  setup.py
 gidappdata_stubs/gidappdata/cli/: skeleton_tree.pyi
 gidappdata_stubs/gidappdata/standard_appdata/: appdata_provider.pyi  appdata_storager.pyi
 gidappdata_stubs/gidappdata/utility/: exceptions.pyi
gidappdata/: __init__.py
gidappdata/cli/: create_datapack_skeleton.py  pack_and_bin_and_py_data.py  prebuilt_folders.json  skeleton_tree.py  tree_render.py
gidappdata/data/: data_pack_skeleton_data.py
gidappdata/data/serialized_skeletons/: prebuilt_standard.json
gidappdata/standard_appdata/: __init__.py  appdata_provider.py  appdata_provider_new.py  appdata_storager.py
gidappdata/utility/: bridge_configparser.py  exceptions.py  extended_dotenv.py  functions.py
pytest_coverage/gidappdata_coverage_html/: gidappdata___init___py.html  gidappdata_cli___init___py.html  gidappdata_cli_create_datapack_skeleton_py.html  gidappdata_cli_pack_and_bin_and_py_data_py.html  gidappdata_cli_skeleton_tree_py.html  gidappdata_cli_tree_render_py.html  gidappdata_data___init___py.html  gidappdata_data_data_pack_skeleton_data_py.html  gidappdata_data_script_data_py.html  gidappdata_standard_appdata___init___py.html  gidappdata_standard_appdata_appdata_provider_new_py.html  gidappdata_standard_appdata_appdata_provider_py.html  gidappdata_standard_appdata_appdata_storager_py.html  gidappdata_utility___init___py.html  gidappdata_utility_exceptions_py.html  gidappdata_utility_extended_dotenv_py.html  gidappdata_utility_functions_py.html  gidappdata_utility_misc_py.html  index.html  status.json
tests/skeleton_tree_test/: conftest.py  serialize_test_compare.json  test_skeleton_tree.py
tests/skeleton_tree_tests/: conftest.py  example_cfg.ini  test_skeleton_tree.py
tests/standard_appdata_test/: bin_data.py  conftest.py  test_appdata_advanced.py  test_appdata_creation.py
tools/: activate_with_vars.bat  convert_requirements_dev_to_normal.py  create_venv_extra_envvars.py  get-pip.py  install_into_venv.cmd  isort_all.cmd  log_pipe_create_venv.cmd  memory_profiling_time.cmd  memory_profiling_time__main__.cmd  pipreqs_create_requirements.cmd  prepare_venv_settings.py  profiling_to_graph.cmd  profiling_to_graph__main__.cmd  profiling_to_text.cmd  profiling_to_text__main__ .cmd  pytest_help.txt  pytest_run.cmd  pytest_run_coverage.cmd  remove_connect_by_name.py
tools/venv_setup_settings/: post_setup_scripts.txt  pre_setup_scripts.txt  required_dev.txt  required_misc.txt  required_personal_packages.txt
